<resources>
    <string name="app_name">HerbaGuideApps</string>

    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_continue_as_guest">Continue as guest</string>
    <string name="welcome_hi">Hi,</string>
    <string name="welcome_to_herbaguide">Welcome to HerbaGuide! 🌿</string>
    <string name="welcome_tagline">Discover the Power of Nature at Your Fingertips.</string>
    <string name="welcome_title_menu2">What Do You Get at HerbaGuide?</string>
    <string name="welcome_menu2_point1">Quick Identification</string>
    <string name="welcome_menu2_point1_desc">Simply take a photo of the plant, and let HerbaGuide identify it for you.</string>
    <string name="welcome_menu2_point2">Full Information</string>
    <string name="welcome_menu2_point2_desc">Get in-depth knowledge about the benefits, uses, and processing of herbal plants.</string>
    <string name="welcome_menu2_point3">Practical Guide</string>
    <string name="welcome_menu2_point3_desc">Find herbal recipes and step-by-step guides for your natural health.</string>
    <string name="image_welcome">Image Welcome</string>
    <string name="welcome_title_menu3">Let\'s take care of our health together by returning to nature. \n\nExplore, learn, and utilize herbs for your well-being!</string>
    <string name="title_skip">Skip</string>
    <string name="image_explore">Image Explore</string>
    <string name="welcome_back_glad_to_see_you_again">Welcome back! Glad to see you, Again!</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register_now">Don’t have an account? Register Now</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="input_password">Enter your password</string>
    <string name="input_email">Enter your email</string>
    <string name="title_register_now">Register Now</string>
    <string name="title_don_t_have_an_account">Don\'t have an account?</string>
    <string name="input_full_name">Full Name</string>
    <string name="input_confirm_your_password">Confirm your password</string>
    <string name="come_join_us_and_get_the_benefits">Come join us and get the benefits</string>
    <string name="or">Or</string>
    <string name="have_an_account">Have an account?</string>
    <string name="content_image_plant">Image Plant</string>
    <string name="title_home_name">Hi, %1$s</string>
    <string name="googleWebID">828100792435-pfg1pvv2dlhmhdqbvvh4sl8ccji6dm6g.apps.googleusercontent.com</string>

    <string name="msg_email_must_filled">Email must filled</string>
    <string name="msg_password_cannot_be_blank">Password cannot be blank</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="name_cannot_be_blank">Name cannot be blank</string>
    <string name="confirm_password_cannot_be_blank">Confirm password cannot be blank</string>
    <string name="password_not_same">Password not same</string>
    <string name="title_description">Description</string>
    <string name="title_usability">Usability</string>
    <string name="recent_history">Recent History</string>
    <string name="trending_news">Trending News</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="next">Next</string>
</resources>