<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_48dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore_48dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/nav_scan"
        android:icon="@drawable/ic_center_focus_strong_48dp"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history_48dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_48dp"
        android:title="@string/title_profile" />

</menu>